--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "plotly.js": "^1.42.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-plotly.js": "^2.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,5 +27,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  },
+
+  "homepage": "https://IrisZZZ.github.io/tutorforceapp/"
+
+
 }
