--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "plotly.js": "^1.42.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-plotly.js": "^2.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
